# Research-Knowledge-Base-RAG-System

./: .gitignore  README.md  debug_milvus_schema.py  debug_search.py  download_bge.py  eval.json  eval_qa.json  eval_rag.py  generate_ragas_eval_data.py  pyproject.toml  ragas_eval_dataset.json  ragas_eval_result.json  ragas_eval_summary.json  run_ragas_eval.py
.claude/: settings.local.json
app/clients/: milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/conf/: mineru_config.py  minio_config.py
app/core/: load_prompt.py  logger.py  uvicorn_logging.py
app/import_process/: exceptions.py
app/import_process/agent/: main_graph.py  state.py
app/import_process/api/: file_import_service.py  file_import_service_ori.py  kb_delete_preview_service.py
app/import_process/page/: import.html
app/lm/: embedding_utils.py  lm_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/api/: query_service.py
app/query_process/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/page/: chat.html
app/tool/: download_reranker.py
app/utils/: escape_milvus_string_utils.py  task_utils.py
prompts/: answer_out.prompt  paper_item_name_recognition.prompt  paper_recognition_system.prompt  rewritten_query_and_itemnames.prompt
scripts/: batch_import_papers.py
scripts/paper_import/: __init__.py  cli.py  collect.py  config.py  http_session.py  import_errors.py  manifest.py  metadata.py  metadata_writer.py  pdf.py  pipeline.py  search.py  text_utils.py
scripts/paper_import/crawlers/: __init__.py  aaai.py  acl.py  arxiv.py  colm.py  cvf.py  iclr.py  icml.py  ijcai.py  neurips.py  (+1 more)
test/: test.py
(+10 files in other folders)
